--- a/uknown_4a949e.break.json
+++ b/uknown_4a949e.break.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_4a949e.break",
 	"type": "fragment",
-	"mode": "player",
+	"mode": "timeout",
 	"script": "uknown_4a949e.break",
 	"sector": "VNP_5717",
 	"sec_level": 4,
 	"date_added": 1563716096218,
-	"last_scraped": 1568679970017,
+	"last_scraped": 1568707570585,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,23 +14,30 @@
 		}
 	],
 	"scrape_ct": 19,
-	"next_scrape": 1568762700263,
+	"next_scrape": 1568790068364,
 	"category": "risk_factor",
-	"last_update": 1567721712132,
+	"last_update": 1568707570585,
 	"output": [
 		{
 			"args": {},
-			"calls": 3664,
+			"calls": 5274,
 			"base": "YOU COULD WIN 2GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE`",
 			"fragments": [
+				"veryo",
+				"s gre",
+				"na Mi",
+				"aki |",
+				"obal |",
 				"al | S",
 				"a Miya",
 				" great",
 				"yawaki ",
+				"Miyawak",
 				"ER imiy",
 				": Intro",
 				" USER i",
-				"e-global"
+				"e-global",
+				"UBJ: Int"
 			]
 		},
 		{
@@ -385,7 +392,7 @@
 			"args": {
 				"do": "win"
 			},
-			"calls": 200,
+			"calls": 302,
 			"base": "YOU WON 2GC\n...if i could afford to pay out.",
 			"fragments": [
 				"veryo",
@@ -398,7 +405,12 @@
 			]
 		}
 	],
-	"updt": 1567721937753,
-	"edit": 5,
-	"pl_output": "YOU COULD WIN 1GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE`"
+	"updt": 1568686193659,
+	"edit": 6,
+	"pl_output": "YOU COULD WIN 1GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE`",
+	"retry_args": [
+		{
+			"do": "LOSE"
+		}
+	]
 }
