--- a/uknown_dtc8il.external_fg764r.json
+++ b/uknown_dtc8il.external_fg764r.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_dtc8il.external_fg764r",
 	"type": "fragment",
-	"mode": "player",
+	"mode": "could not json",
 	"script": "uknown_dtc8il.external_fg764r",
 	"sector": "VNP_5082",
 	"sec_level": 4,
@@ -358,8 +358,8 @@
 			]
 		}
 	],
-	"updt": 1567723294921,
-	"edit": 6,
+	"updt": 1568686193659,
+	"edit": 7,
 	"pl_output": "YOU COULD WIN 2GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE`",
 	"identified": [
 		{
@@ -428,9 +428,6 @@
 		}
 	],
 	"retry_args": [
-		{
-			"do": "win"
-		},
 		{
 			"do": "LOSE"
 		}
