--- a/uknown_gyuk8v.iscord_link.json
+++ b/uknown_gyuk8v.iscord_link.json
@@ -1,28 +1,28 @@
 {
 	"_id": "uknown_gyuk8v.iscord_link",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_gyuk8v.iscord_link",
 	"sector": "VNP_9604",
 	"sec_level": 4,
 	"date_added": 1565704439572,
-	"last_scraped": 1568679861102,
+	"last_scraped": 1568707338667,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1565704439572
 		}
 	],
-	"updt": 1567721035911,
-	"edit": 9,
+	"updt": 1568686193659,
+	"edit": 10,
 	"scrape_ct": 20,
-	"next_scrape": 1568723484281,
+	"next_scrape": 1568753655972,
 	"category": "clicker",
-	"last_update": 1568679861102,
+	"last_update": 1568707338667,
 	"output": [
 		{
 			"args": {},
-			"calls": 45449,
+			"calls": 56432,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"ts te",
@@ -62,7 +62,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 64232,
+			"calls": 68558,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"s ten",
@@ -98,7 +98,7 @@
 			"args": {
 				"CLICK": true
 			},
-			"calls": 6291,
+			"calls": 7235,
 			"base": "`LCLICK SECURED`",
 			"fragments": [
 				"s ten",
