--- a/uknown_nos692.hackmud_nano.json
+++ b/uknown_nos692.hackmud_nano.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_nos692.hackmud_nano",
 	"type": "fragment",
-	"mode": "player",
+	"mode": "skip",
 	"script": "uknown_nos692.hackmud_nano",
 	"sector": "NGC_7257",
 	"sec_level": 4,
@@ -407,13 +407,10 @@
 			]
 		}
 	],
-	"updt": 1567722617071,
-	"edit": 5,
+	"updt": 1568686193659,
+	"edit": 6,
 	"pl_output": "YOU COULD WIN 2GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE`",
 	"retry_args": [
-		{
-			"do": "win"
-		},
 		{
 			"do": "LOSE"
 		}
