--- a/unknown_tye3md.xfer.json
+++ b/unknown_tye3md.xfer.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_tye3md.xfer",
 	"type": "fragment",
-	"mode": "player",
+	"mode": "skip",
 	"script": "unknown_tye3md.xfer",
 	"sector": "K_2748",
 	"sec_level": 4,
@@ -478,13 +478,10 @@
 			]
 		}
 	],
-	"updt": 1567721937753,
-	"edit": 5,
+	"updt": 1568707628144,
+	"edit": 7,
 	"pl_output": "YOU COULD WIN 2GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE`",
 	"retry_args": [
-		{
-			"do": "win"
-		},
 		{
 			"do": "LOSE"
 		}
