--- a/unknown_ai25zc.brain_check.json
+++ b/unknown_ai25zc.brain_check.json
@@ -1,12 +1,12 @@
 {
 	"_id": "unknown_ai25zc.brain_check",
 	"type": "fragment",
-	"mode": "player",
+	"mode": "timeout",
 	"script": "unknown_ai25zc.brain_check",
 	"sector": "SPC_4016",
 	"sec_level": 4,
 	"date_added": 1566786809967,
-	"last_scraped": 1568680523319,
+	"last_scraped": 1568708324275,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,9 +14,9 @@
 		}
 	],
 	"scrape_ct": 20,
-	"next_scrape": 1568767452344,
+	"next_scrape": 1568794485380,
 	"category": "risk_factor",
-	"last_update": 1567743366480,
+	"last_update": 1568708324275,
 	"output": [
 		{
 			"args": {},
@@ -39,7 +39,7 @@
 			"args": {
 				"do": "win"
 			},
-			"calls": 101,
+			"calls": 201,
 			"base": "YOU WON 2GC\n...if i could afford to pay out.",
 			"fragments": [
 				", no.",
@@ -55,13 +55,10 @@
 			]
 		}
 	],
-	"updt": 1567743379682,
-	"edit": 7,
+	"updt": 1568686417352,
+	"edit": 8,
 	"pl_output": "YOU COULD WIN 2GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE`",
 	"retry_args": [
-		{
-			"do": "win"
-		},
 		{
 			"do": "LOSE"
 		}
