--- a/uknown_2mspk1.script.json
+++ b/uknown_2mspk1.script.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_2mspk1.script",
 	"type": "fragment",
-	"mode": "player",
+	"mode": "could not json",
 	"script": "uknown_2mspk1.script",
 	"sector": "VNP_3290",
 	"sec_level": 4,
@@ -312,13 +312,10 @@
 			]
 		}
 	],
-	"updt": 1567742926063,
-	"edit": 5,
+	"updt": 1568686417352,
+	"edit": 6,
 	"pl_output": "YOU COULD WIN 2GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE`",
 	"retry_args": [
-		{
-			"do": "win"
-		},
 		{
 			"do": "LOSE"
 		}
