--- a/unknown_izqsg8.bank.json
+++ b/unknown_izqsg8.bank.json
@@ -1,28 +1,28 @@
 {
 	"_id": "unknown_izqsg8.bank",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_izqsg8.bank",
 	"sector": "K_2748",
 	"sec_level": 4,
 	"date_added": 1564168295048,
-	"last_scraped": 1568680765217,
+	"last_scraped": 1568708814816,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1564168295048
 		}
 	],
-	"updt": 1567776764230,
-	"edit": 8,
+	"updt": 1568686642359,
+	"edit": 9,
 	"scrape_ct": 16,
-	"next_scrape": 1568722189124,
+	"next_scrape": 1568749508111,
 	"category": "clicker",
-	"last_update": 1568680765217,
+	"last_update": 1568708814816,
 	"output": [
 		{
 			"args": {},
-			"calls": 64633,
+			"calls": 69091,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"ve be",
@@ -58,7 +58,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 48306,
+			"calls": 60423,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"ve be",
@@ -128,6 +128,11 @@
 				"y\\n21A5 Y",
 				"\\n21A5 Yo"
 			]
+		}
+	],
+	"retry_args": [
+		{
+			"CLICK": true
 		}
 	]
 }
