--- a/unknown_x4o7lb.man.json
+++ b/unknown_x4o7lb.man.json
@@ -1,25 +1,25 @@
 {
 	"_id": "unknown_x4o7lb.man",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_x4o7lb.man",
 	"sector": "SPC_8584",
 	"sec_level": 4,
 	"date_added": 1560585957167,
-	"last_scraped": 1568680954799,
+	"last_scraped": 1568709397216,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1560585957167
 		}
 	],
-	"next_scrape": 1568725267671,
+	"next_scrape": 1568752549514,
 	"category": "clicker",
-	"last_update": 1568680954799,
+	"last_update": 1568709397216,
 	"output": [
 		{
 			"args": {},
-			"calls": 869974,
+			"calls": 880228,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"ot si",
@@ -353,8 +353,8 @@
 			]
 		}
 	],
-	"updt": 1567811057945,
-	"edit": 104,
+	"updt": 1568686642359,
+	"edit": 105,
 	"identified": [
 		{
 			"document": "NOT FOUND",
@@ -439,6 +439,14 @@
 			"frags": [
 				"rstand"
 			]
+		}
+	],
+	"retry_args": [
+		{
+			"click": true
+		},
+		{
+			"CLICK": true
 		}
 	]
 }
