--- a/unknown_z24jxv.defend.json
+++ b/unknown_z24jxv.defend.json
@@ -1,25 +1,25 @@
 {
 	"_id": "unknown_z24jxv.defend",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_z24jxv.defend",
 	"sector": "VNP_1491",
 	"sec_level": 4,
 	"date_added": 1559965339482,
-	"last_scraped": 1568681036609,
+	"last_scraped": 1568709648932,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1559965339482
 		}
 	],
-	"next_scrape": 1568722108704,
+	"next_scrape": 1568752302897,
 	"category": "clicker",
-	"last_update": 1568681036609,
+	"last_update": 1568709648932,
 	"output": [
 		{
 			"args": {},
-			"calls": 1174653,
+			"calls": 1178825,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"wins,",
@@ -61,7 +61,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 1237049,
+			"calls": 1243193,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"wins,",
@@ -103,7 +103,7 @@
 			"args": {
 				"CLICK": true
 			},
-			"calls": 157996,
+			"calls": 159275,
 			"base": "`LCLICK SECURED`",
 			"fragments": [
 				"wins,",
@@ -142,8 +142,8 @@
 			]
 		}
 	],
-	"updt": 1567834526714,
-	"edit": 147,
+	"updt": 1568686642359,
+	"edit": 148,
 	"identified": [
 		{
 			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
