--- a/uknown_7hh07e.enlist.json
+++ b/uknown_7hh07e.enlist.json
@@ -1,20 +1,20 @@
 {
 	"_id": "uknown_7hh07e.enlist",
 	"type": "fragment",
-	"mode": "player",
+	"mode": "skip",
 	"script": "uknown_7hh07e.enlist",
 	"sector": "SPC_0707",
 	"sec_level": 4,
 	"date_added": 1562661695663,
-	"last_scraped": 1568683768825,
+	"last_scraped": 1568710532945,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1562661695663
 		}
 	],
-	"updt": 1567724649526,
-	"edit": 3,
+	"updt": 1568686193659,
+	"edit": 4,
 	"pl_output": "{\"ok\":false,\"msg\":\"Cannot read property 'undefined' of null\\n`D#######`\\n\"}",
-	"next_scrape": 1568773877725
+	"next_scrape": 1568803434424
 }
