--- a/uknown_uadizr.greet.json
+++ b/uknown_uadizr.greet.json
@@ -6,20 +6,20 @@
 	"sector": "K_2748",
 	"sec_level": 4,
 	"date_added": 1564139747806,
-	"last_scraped": 1568689194406,
+	"last_scraped": 1568711948628,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1564139747806
 		}
 	],
-	"next_scrape": 1568733306603,
+	"next_scrape": 1568758293355,
 	"category": "clicker",
-	"last_update": 1568689194406,
+	"last_update": 1568711948628,
 	"output": [
 		{
 			"args": {},
-			"calls": 100621,
+			"calls": 108211,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"00 00",
@@ -47,7 +47,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 79636,
+			"calls": 87936,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"00 00",
@@ -854,6 +854,79 @@
 				"0000\\n0 SE",
 				"0000 0K SE"
 			]
+		},
+		{
+			"args": {
+				"CLICK": true
+			},
+			"calls": 520,
+			"base": "`LCLICK00E0URED`",
+			"fragments": [
+				" 000 0",
+				" 00 00",
+				" 0 100",
+				" 0 000",
+				"0000 0C",
+				" S000 0",
+				" S00 00",
+				" S0 100",
+				" S0 000",
+				" 0000 0",
+				"0000\\n0C",
+				"0000 0EC",
+				"00 00SEC",
+				"0 100SEC",
+				"0 000SEC",
+				" SE000 0",
+				" SE00 00",
+				" SE0 100",
+				" SE0 000",
+				" S0000 0",
+				" 0000\\n0",
+				"0000\\n0EC",
+				"0000 0SEC",
+				"00 00 SEC",
+				"0 100 SEC",
+				"0 000 SEC",
+				"000\\n0000C",
+				"0000\\n0SEC",
+				"0000 0 SEC",
+				"00 00K SEC",
+				"0 100K SEC",
+				"0 000K SEC",
+				"0000\\n0 SEC",
+				"0000 0K SEC",
+				"000 0CK SEC",
+				"00 00CK SEC",
+				"0 100CK SEC",
+				"0 000CK SEC"
+			]
+		},
+		{
+			"args": {
+				"CLICK": true
+			},
+			"calls": 1107,
+			"base": "`LCLICK SE0URED`",
+			"fragments": [
+				"00 00C",
+				"0 100C",
+				"0 000C",
+				"0000 0C",
+				"00 00EC",
+				"0 100EC",
+				"0 000EC",
+				"0000\\n0C",
+				"0000 0EC",
+				"00 00SEC",
+				"0 100SEC",
+				"0 000SEC",
+				"0000\\n0EC",
+				"0000 0SEC",
+				"000\\n0000C",
+				"0000\\n0SEC",
+				"000\\n0000EC"
+			]
 		}
 	],
 	"identified": [
@@ -913,6 +986,6 @@
 			]
 		}
 	],
-	"updt": 1567715846573,
-	"edit": 7
+	"updt": 1568689576275,
+	"edit": 8
 }
