--- a/uknown_vdw6b9.gallery.json
+++ b/uknown_vdw6b9.gallery.json
@@ -1,25 +1,25 @@
 {
 	"_id": "uknown_vdw6b9.gallery",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_vdw6b9.gallery",
 	"sector": "NGC_4554",
 	"sec_level": 4,
 	"date_added": 1562817977792,
-	"last_scraped": 1568693224414,
+	"last_scraped": 1568714000016,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1562817977792
 		}
 	],
-	"next_scrape": 1568733403530,
+	"next_scrape": 1568755709865,
 	"category": "clicker",
-	"last_update": 1568693224414,
+	"last_update": 1568714000016,
 	"output": [
 		{
 			"args": {},
-			"calls": 246841,
+			"calls": 254413,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"ritin",
@@ -59,7 +59,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 269103,
+			"calls": 276888,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"ritin",
@@ -152,6 +152,11 @@
 			]
 		}
 	],
-	"updt": 1567745182102,
-	"edit": 26
+	"updt": 1568693411804,
+	"edit": 27,
+	"retry_args": [
+		{
+			"CLICK": true
+		}
+	]
 }
