--- a/unknown_oyi4er.scam.json
+++ b/unknown_oyi4er.scam.json
@@ -1,25 +1,25 @@
 {
 	"_id": "unknown_oyi4er.scam",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "timeout",
 	"script": "unknown_oyi4er.scam",
 	"sector": "NGC_1495",
 	"sec_level": 4,
 	"date_added": 1561793442557,
-	"last_scraped": 1568692962208,
+	"last_scraped": 1568713897373,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1561793442557
 		}
 	],
-	"next_scrape": 1568733364569,
+	"next_scrape": 1568804687323,
 	"category": "clicker",
-	"last_update": 1568692962208,
+	"last_update": 1568713897373,
 	"output": [
 		{
 			"args": {},
-			"calls": 656560,
+			"calls": 666735,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"y and",
@@ -243,6 +243,14 @@
 			]
 		}
 	],
-	"updt": 1568692962005,
-	"edit": 73
+	"updt": 1568693187463,
+	"edit": 74,
+	"retry_args": [
+		{
+			"click": true
+		},
+		{
+			"CLICK": true
+		}
+	]
 }
