--- a/unknown_yv2hdz.text.json
+++ b/unknown_yv2hdz.text.json
@@ -1,12 +1,12 @@
 {
 	"_id": "unknown_yv2hdz.text",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_yv2hdz.text",
 	"sector": "K_6458",
 	"sec_level": 4,
 	"date_added": 1566086357394,
-	"last_scraped": 1568692821306,
+	"last_scraped": 1568713747740,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,13 +14,13 @@
 		}
 	],
 	"scrape_ct": 18,
-	"next_scrape": 1568738751889,
+	"next_scrape": 1568755886563,
 	"category": "clicker",
-	"last_update": 1568692821306,
+	"last_update": 1568713747740,
 	"output": [
 		{
 			"args": {},
-			"calls": 48208,
+			"calls": 60573,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				" Seco",
@@ -48,7 +48,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 32231,
+			"calls": 36183,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				" Seco",
@@ -101,8 +101,8 @@
 			]
 		}
 	],
-	"updt": 1567732998515,
-	"edit": 7,
+	"updt": 1568713715481,
+	"edit": 9,
 	"identified": [
 		{
 			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
@@ -114,6 +114,11 @@
 				" vector ",
 				"\\n2037 Se"
 			]
+		}
+	],
+	"retry_args": [
+		{
+			"CLICK": true
 		}
 	]
 }
