--- a/unknown_hxejyx.editor_notes.json
+++ b/unknown_hxejyx.editor_notes.json
@@ -1,25 +1,25 @@
 {
 	"_id": "unknown_hxejyx.editor_notes",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_hxejyx.editor_notes",
 	"sector": "SPC_2734",
 	"sec_level": 4,
 	"date_added": 1561129767964,
-	"last_scraped": 1568692911745,
+	"last_scraped": 1568713848381,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1561129767964
 		}
 	],
-	"next_scrape": 1568739343868,
+	"next_scrape": 1568759421783,
 	"category": "clicker",
-	"last_update": 1568692911745,
+	"last_update": 1568713848381,
 	"output": [
 		{
 			"args": {},
-			"calls": 627326,
+			"calls": 635037,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"as go",
@@ -50,7 +50,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 670090,
+			"calls": 674702,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"as go",
@@ -81,7 +81,7 @@
 			"args": {
 				"CLICK": true
 			},
-			"calls": 92782,
+			"calls": 93949,
 			"base": "`LCLICK SECURED`",
 			"fragments": [
 				"as go",
@@ -109,8 +109,8 @@
 			]
 		}
 	],
-	"updt": 1567733223470,
-	"edit": 81,
+	"updt": 1568692962005,
+	"edit": 82,
 	"identified": [
 		{
 			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
