--- a/uknown_fifxgn.bestgrade.json
+++ b/uknown_fifxgn.bestgrade.json
@@ -6,7 +6,7 @@
 	"sector": "HJG_7617",
 	"sec_level": 4,
 	"date_added": 1566251242098,
-	"last_scraped": 1568694328852,
+	"last_scraped": 1568714833914,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,13 +14,13 @@
 		}
 	],
 	"scrape_ct": 13,
-	"next_scrape": 1568739949252,
+	"next_scrape": 1568758860817,
 	"category": "clicker",
-	"last_update": 1568694328852,
+	"last_update": 1568714833914,
 	"output": [
 		{
 			"args": {},
-			"calls": 62934,
+			"calls": 70180,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"loyee",
@@ -54,7 +54,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 70982,
+			"calls": 73911,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"loyee",
@@ -119,8 +119,8 @@
 			]
 		}
 	],
-	"updt": 1568694316137,
-	"edit": 10,
+	"updt": 1568694542350,
+	"edit": 11,
 	"identified": [
 		{
 			"document": "Erin File",
@@ -135,6 +135,11 @@
 				"t; revoc",
 				"encefort"
 			]
+		}
+	],
+	"retry_args": [
+		{
+			"CLICK": true
 		}
 	]
 }
