--- a/unknown_5rw4mm.casino.json
+++ b/unknown_5rw4mm.casino.json
@@ -1,25 +1,25 @@
 {
 	"_id": "unknown_5rw4mm.casino",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_5rw4mm.casino",
 	"sector": "VNP_1006",
 	"sec_level": 4,
 	"date_added": 1562546094913,
-	"last_scraped": 1568694227909,
+	"last_scraped": 1568714711825,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1562546094913
 		}
 	],
-	"next_scrape": 1568737380414,
+	"next_scrape": 1568756320978,
 	"category": "clicker",
-	"last_update": 1568694227909,
+	"last_update": 1568714711825,
 	"output": [
 		{
 			"args": {},
-			"calls": 256252,
+			"calls": 268051,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"01 01",
@@ -47,7 +47,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 227305,
+			"calls": 234700,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"01 01",
@@ -1475,8 +1475,8 @@
 			]
 		}
 	],
-	"updt": 1567777441710,
-	"edit": 32,
+	"updt": 1568694316137,
+	"edit": 33,
 	"identified": [
 		{
 			"document": "NOT FOUND",
@@ -1677,6 +1677,11 @@
 			"frags": [
 				" E"
 			]
+		}
+	],
+	"retry_args": [
+		{
+			"CLICK": true
 		}
 	]
 }
