--- a/unknown_bxz2zy.pin.json
+++ b/unknown_bxz2zy.pin.json
@@ -1,27 +1,27 @@
 {
 	"_id": "unknown_bxz2zy.pin",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_bxz2zy.pin",
 	"sector": "VNP_1006",
 	"sec_level": 4,
 	"date_added": 1562618952479,
-	"last_scraped": 1568694418657,
+	"last_scraped": 1568714925602,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1562618952479
 		}
 	],
-	"updt": 1567780373507,
-	"edit": 28,
-	"next_scrape": 1568739555963,
+	"updt": 1568694542350,
+	"edit": 29,
+	"next_scrape": 1568761274808,
 	"category": "fishie_tank",
-	"last_update": 1568694418657,
+	"last_update": 1568714952946,
 	"output": [
 		{
 			"args": {},
-			"calls": 264314,
+			"calls": 270145,
 			"base": "Some fishies are in the tank. They are swimming. and hungry?\ndo:\"feed\" | do:\"clean\"",
 			"fragments": [
 				"nd re",
@@ -53,7 +53,7 @@
 			"args": {
 				"do": "feed"
 			},
-			"calls": 26481,
+			"calls": 27731,
 			"base": [
 				"Fishies are happy.",
 				"actuly they look fine",
@@ -129,6 +129,11 @@
 				"ask 'las",
 				"' timest"
 			]
+		}
+	],
+	"retry_args": [
+		{
+			"do": "clean"
 		}
 	]
 }
