--- a/abndnd_nxivu9.lz.json
+++ b/abndnd_nxivu9.lz.json
@@ -1,12 +1,12 @@
 {
 	"_id": "abndnd_nxivu9.lz",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "abndnd_nxivu9.lz",
 	"sector": "K_6458",
 	"sec_level": 4,
 	"date_added": 1566192488933,
-	"last_scraped": 1568695062311,
+	"last_scraped": 1568715325610,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,13 +14,13 @@
 		}
 	],
 	"scrape_ct": 17,
-	"next_scrape": 1568739887175,
+	"next_scrape": 1568760713934,
 	"category": "clicker",
-	"last_update": 1568695062311,
+	"last_update": 1568715325610,
 	"output": [
 		{
 			"args": {},
-			"calls": 57019,
+			"calls": 61328,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"r maki",
@@ -54,7 +54,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 82202,
+			"calls": 98228,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"r maki",
@@ -88,7 +88,7 @@
 			"args": {
 				"CLICK": true
 			},
-			"calls": 9229,
+			"calls": 10339,
 			"base": "`LCLICK SECURED`",
 			"fragments": [
 				"r maki",
@@ -152,8 +152,8 @@
 			]
 		}
 	],
-	"updt": 1567796165638,
-	"edit": 9,
+	"updt": 1568715293897,
+	"edit": 11,
 	"identified": [
 		{
 			"document": "MFT0XCF_CLST0X84_SECT0X6B58_FILE0X7A81819D",
