--- a/unknown_efra6o.bot_brain.json
+++ b/unknown_efra6o.bot_brain.json
@@ -6,20 +6,20 @@
 	"sector": "K_7542",
 	"sec_level": 4,
 	"date_added": 1561581886645,
-	"last_scraped": 1568707178216,
+	"last_scraped": 1568726330251,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1561581886645
 		}
 	],
-	"next_scrape": 1568747528631,
+	"next_scrape": 1568772627985,
 	"category": "clicker",
-	"last_update": 1568707178216,
+	"last_update": 1568726330251,
 	"output": [
 		{
 			"args": {},
-			"calls": 225387,
+			"calls": 229632,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"ou've",
@@ -124,8 +124,8 @@
 			]
 		}
 	],
-	"updt": 1568707178139,
-	"edit": 26,
+	"updt": 1568707402021,
+	"edit": 27,
 	"identified": [
 		{
 			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
@@ -137,6 +137,14 @@
 				"5 You'v",
 				"allory\\n"
 			]
+		}
+	],
+	"retry_args": [
+		{
+			"click": true
+		},
+		{
+			"CLICK": true
 		}
 	]
 }
