--- a/unknown_v7pdh4.crack1.json
+++ b/unknown_v7pdh4.crack1.json
@@ -1,28 +1,28 @@
 {
 	"_id": "unknown_v7pdh4.crack1",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_v7pdh4.crack1",
 	"sector": "K_9556",
 	"sec_level": 4,
 	"date_added": 1563624033768,
-	"last_scraped": 1568708665101,
+	"last_scraped": 1568726722262,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1563624033768
 		}
 	],
-	"updt": 1568686642359,
-	"edit": 10,
+	"updt": 1568708756522,
+	"edit": 11,
 	"scrape_ct": 4,
-	"next_scrape": 1568752561023,
+	"next_scrape": 1568773105015,
 	"category": "fishie_tank",
-	"last_update": 1568708665101,
+	"last_update": 1568726722262,
 	"output": [
 		{
 			"args": {},
-			"calls": 103118,
+			"calls": 111086,
 			"base": "Some fishies are in the tank. They are swimming. and hungry?\ndo:\"feed\" | do:\"clean\"",
 			"fragments": [
 				"f ter",
@@ -50,7 +50,7 @@
 			"args": {
 				"do": "feed"
 			},
-			"calls": 10509,
+			"calls": 11221,
 			"base": [
 				"Fishies are happy.",
 				"actuly they look fine",
@@ -83,7 +83,7 @@
 			"args": {
 				"do": "clean"
 			},
-			"calls": 105614,
+			"calls": 108623,
 			"base": "Fishies are happy. Algea eaters are displeased.",
 			"fragments": [
 				"f ter",
