--- a/unknown_yh1nxh.solve_fawkes.json
+++ b/unknown_yh1nxh.solve_fawkes.json
@@ -1,25 +1,25 @@
 {
 	"_id": "unknown_yh1nxh.solve_fawkes",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_yh1nxh.solve_fawkes",
 	"sector": "K_0689",
 	"sec_level": 4,
 	"date_added": 1561688446704,
-	"last_scraped": 1568710683303,
+	"last_scraped": 1568727857893,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1561688446704
 		}
 	],
-	"next_scrape": 1568750760685,
+	"next_scrape": 1568771178673,
 	"category": "clicker",
-	"last_update": 1568710683303,
+	"last_update": 1568727857893,
 	"output": [
 		{
 			"args": {},
-			"calls": 463223,
+			"calls": 478190,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				" do t",
@@ -57,7 +57,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 474087,
+			"calls": 478335,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				" do t",
@@ -167,6 +167,11 @@
 			]
 		}
 	],
-	"updt": 1568686417352,
-	"edit": 55
+	"updt": 1568711007582,
+	"edit": 56,
+	"retry_args": [
+		{
+			"CLICK": true
+		}
+	]
 }
