--- a/uknown_uadizr.greet.json
+++ b/uknown_uadizr.greet.json
@@ -1,25 +1,25 @@
 {
 	"_id": "uknown_uadizr.greet",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_uadizr.greet",
 	"sector": "K_2748",
 	"sec_level": 4,
 	"date_added": 1564139747806,
-	"last_scraped": 1568711948628,
+	"last_scraped": 1568728874079,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1564139747806
 		}
 	],
-	"next_scrape": 1568758293355,
+	"next_scrape": 1568775138622,
 	"category": "clicker",
-	"last_update": 1568711948628,
+	"last_update": 1568728874079,
 	"output": [
 		{
 			"args": {},
-			"calls": 108211,
+			"calls": 112073,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"00 00",
@@ -47,7 +47,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 87936,
+			"calls": 98888,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"00 00",
@@ -469,7 +469,7 @@
 			"args": {
 				"CLICK": true
 			},
-			"calls": 964,
+			"calls": 1648,
 			"base": "`LCLIC000ECURED`",
 			"fragments": [
 				"K000 0",
@@ -986,6 +986,6 @@
 			]
 		}
 	],
-	"updt": 1568689576275,
-	"edit": 8
+	"updt": 1568712361629,
+	"edit": 9
 }
