--- a/uknown_1nprk1.nosnipe.json
+++ b/uknown_1nprk1.nosnipe.json
@@ -1,25 +1,25 @@
 {
 	"_id": "uknown_1nprk1.nosnipe",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_1nprk1.nosnipe",
 	"sector": "SPC_7402",
 	"sec_level": 4,
 	"date_added": 1562744570479,
-	"last_scraped": 1568712973106,
+	"last_scraped": 1568729655040,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1562744570479
 		}
 	],
-	"next_scrape": 1568753427668,
+	"next_scrape": 1568772603869,
 	"category": "clicker",
-	"last_update": 1568712973106,
+	"last_update": 1568729655040,
 	"output": [
 		{
 			"args": {},
-			"calls": 222072,
+			"calls": 228477,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"this_",
@@ -58,7 +58,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 247765,
+			"calls": 252178,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"this_",
@@ -148,6 +148,11 @@
 			]
 		}
 	],
-	"updt": 1568690930922,
-	"edit": 27
+	"updt": 1568713264479,
+	"edit": 28,
+	"retry_args": [
+		{
+			"CLICK": true
+		}
+	]
 }
