--- a/uknown_9j64nk.birb.json
+++ b/uknown_9j64nk.birb.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_9j64nk.birb",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_9j64nk.birb",
 	"sector": "SPC_9089",
 	"sec_level": 4,
 	"date_added": 1564446964388,
-	"last_scraped": 1568713084131,
+	"last_scraped": 1568729715269,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,13 +14,13 @@
 		}
 	],
 	"scrape_ct": 16,
-	"next_scrape": 1568753544965,
+	"next_scrape": 1568775513396,
 	"category": "clicker",
-	"last_update": 1568713084131,
+	"last_update": 1568729715269,
 	"output": [
 		{
 			"args": {},
-			"calls": 56302,
+			"calls": 72256,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"15C s",
@@ -119,8 +119,8 @@
 			]
 		}
 	],
-	"updt": 1568691155334,
-	"edit": 7,
+	"updt": 1568713264479,
+	"edit": 8,
 	"identified": [
 		{
 			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
@@ -139,6 +139,14 @@
 				" if atta",
 				"ender \\n2"
 			]
+		}
+	],
+	"retry_args": [
+		{
+			"click": true
+		},
+		{
+			"CLICK": true
 		}
 	]
 }
