--- a/uknown_3de6l0.void.json
+++ b/uknown_3de6l0.void.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_3de6l0.void",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "timeout",
 	"script": "uknown_3de6l0.void",
 	"sector": "VNP_3676",
 	"sec_level": 3,
 	"date_added": 1559619466066,
-	"last_scraped": 1568714662049,
+	"last_scraped": 1568730851334,
 	"script_log": [
 		{
 			"type": "added",
@@ -25,15 +25,15 @@
 			}
 		]
 	],
-	"updt": 1568694316137,
-	"edit": 9,
-	"next_scrape": 1568755552871,
+	"updt": 1568714841910,
+	"edit": 10,
+	"next_scrape": 1568823676602,
 	"category": "UNKNOWN CATEGORY",
-	"last_update": 1568714662049,
+	"last_update": 1568730851334,
 	"output": [
 		{
 			"args": {},
-			"calls": 835,
+			"calls": 935,
 			"base": "The message is: Hackmud for life",
 			"fragments": [
 				"is be",
