--- a/uknown_bqu6gq.load_brain.json
+++ b/uknown_bqu6gq.load_brain.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_bqu6gq.load_brain",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_bqu6gq.load_brain",
 	"sector": "NGC_7982",
 	"sec_level": 4,
 	"date_added": 1563474647990,
-	"last_scraped": 1568715103486,
+	"last_scraped": 1568731092911,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,13 +14,13 @@
 		}
 	],
 	"scrape_ct": 17,
-	"next_scrape": 1568756621878,
+	"next_scrape": 1568774789409,
 	"category": "clicker",
-	"last_update": 1568715103486,
+	"last_update": 1568731092911,
 	"output": [
 		{
 			"args": {},
-			"calls": 79468,
+			"calls": 89650,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"E ERR",
@@ -55,7 +55,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 73981,
+			"calls": 82072,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"E ERR",
@@ -118,8 +118,8 @@
 			]
 		}
 	],
-	"updt": 1568694769774,
-	"edit": 12,
+	"updt": 1568715293897,
+	"edit": 13,
 	"identified": [
 		{
 			"document": "MFT0XF4_CLST0XCC_SECT0X7BE4_FILE0XE2A8BDD4",
@@ -136,6 +136,11 @@
 				"4\\nSYST ",
 				"8BDD4\\nSY"
 			]
+		}
+	],
+	"retry_args": [
+		{
+			"CLICK": true
 		}
 	]
 }
