--- a/unknown_tr6phd.offers.json
+++ b/unknown_tr6phd.offers.json
@@ -1,25 +1,25 @@
 {
 	"_id": "unknown_tr6phd.offers",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_tr6phd.offers",
 	"sector": "K_8441",
 	"sec_level": 4,
 	"date_added": 1562071377214,
-	"last_scraped": 1568715005108,
+	"last_scraped": 1568731021227,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1562071377214
 		}
 	],
-	"next_scrape": 1568760506839,
+	"next_scrape": 1568775354937,
 	"category": "clicker",
-	"last_update": 1568715005108,
+	"last_update": 1568731021227,
 	"output": [
 		{
 			"args": {},
-			"calls": 429016,
+			"calls": 437705,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"she w",
@@ -58,7 +58,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 444505,
+			"calls": 460394,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"she w",
@@ -148,6 +148,11 @@
 			]
 		}
 	],
-	"updt": 1568694769774,
-	"edit": 52
+	"updt": 1568715067648,
+	"edit": 53,
+	"retry_args": [
+		{
+			"CLICK": true
+		}
+	]
 }
